first attempt at fixes text zoom on iphone

--- a/src/assets/pages/Home.css
+++ b/src/assets/pages/Home.css
@@ -46,6 +46,7 @@
     border-radius: 1.5rem;
     border: none;
     outline: none;
+    font-size: 1rem;
     
 }
 
